settings logo fix

--- a/less/less/modules/sprite.less
+++ b/less/less/modules/sprite.less
@@ -30,8 +30,9 @@
     vertical-align: top;
     width: 1em;
     line-height: 1;
-    background: url(../i/logo.svg) no-repeat 0 0 / cover;
-    &:before{
+  background: url(../i/logo.svg) no-repeat 0px 0px;
+  background-size: 100%;
+  &:before{
         content: "\00a0";
     }
     &__white{
