Add task for build css

--- a/src/styles/less/modules/element-rule.less
+++ b/src/styles/less/modules/element-rule.less
@@ -95,7 +95,7 @@
     color: #8f9b92;
     cursor: pointer;
 }
-.adg-slide-clue-max{
+.adg-slide-clue-min{
     left: auto;
     right: -40px;
     text-align: right;
@@ -147,8 +147,3 @@
     border-right: 1px solid #fff;
 }
 // /slider
-
-
-
-
-
