--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -9,8 +9,8 @@
             <div i18n="assistant_slider_explain" class="element-rule_text"></div>
             <div class="element-rule_slider">
                 <div class="adg-slide" id="slider">
-                    <div i18n="assistant_slider_max" class="adg-slide-clue-min"></div>
-                    <div i18n="assistant_slider_min" class="adg-slide-clue-max"></div>
+                    <div i18n="assistant_slider_max" class="adg-slide-clue-max"></div>
+                    <div i18n="assistant_slider_min" class="adg-slide-clue-min"></div>
                 </div>
             </div>
             <div class="element-rule_more">
