--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -4,7 +4,7 @@
         <div i18n="assistant_block_element" class="head_title" id="head_title"></div>
         <div i18n="assistant_block_element_explain" class="head_text" id="head_text"></div>
     </div>
-    <div class="content">
+    <div class="content" id="slider-area">
         <div class="element-rule">
             <div i18n="assistant_slider_explain" class="element-rule_text"></div>
             <div class="element-rule_slider">
