--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -111,10 +111,10 @@
     content: "\00a0" !important;
 }
 
-.adguard-assistant-button-respect-vk {
-    transform: translate3d(-70px, 0, 0);
+.adguard-assistant-button-bottom.adguard-assistant-button-respect-vk {
+    transform: translate3d(-70px, -5px, 0);
 }
 
-.adguard-assistant-button-respect-fb {
-    transform: translate3d(0px, -30px, 0);
+.adguard-assistant-button-bottom.adguard-assistant-button-respect-fb {
+    transform: translate3d(-5px, -40px, 0);
 }
