--- a/src/styles/less/modules/layout.less
+++ b/src/styles/less/modules/layout.less
@@ -21,6 +21,9 @@
         margin: 4px 0 0;
         font-size: 12px;
         color: #343434;
+        @media (max-width: @mobile-settings){
+            display: none;
+        }
     }
 }
 
