--- a/src/styles/less/modules/sprite.less
+++ b/src/styles/less/modules/sprite.less
@@ -20,6 +20,11 @@
     &:hover{
         opacity: .5;
     }
+    @media (max-width: @mobile-settings){
+        font-size: 15px;
+        top: 22px;
+        right: 18px;
+    }
 }
 
 
