--- a/src/styles/less/modules/settings.less
+++ b/src/styles/less/modules/settings.less
@@ -18,10 +18,33 @@
             color: #8f9b92;
             &__pos{
                 margin-top: 21px;
+                 @media (max-width: @mobile-settings){
+                    margin-top: 0;
+                }
+            }
+            @media (max-width: @mobile-settings){
+                width: auto;
             }
         }
         &_val{
             margin: 0 0 0 126px;
+            @media (max-width: @mobile-settings){
+                margin: 0;
+            }
+        }
+        @media (max-width: @mobile-settings){
+            display: flex;
+            flex-direction: column;
+            padding: @mobile-base-offset;
+            border-top: 0;
+        }
+    }
+    &__horizontal{
+        @media (max-width: @mobile-settings){
+            display: flex;
+            justify-content: space-between;
+            padding-left: 15px;
+            padding-right: 15px;
         }
     }
 }
@@ -35,8 +58,14 @@
     font-size: 14px;
     &_field{
         margin: 8px 0 0;
+        @media (max-width: @mobile-settings){
+            margin: 0;
+        }
         &:first-child{
             margin: 0;
+            @media (max-width: @mobile-settings){
+                margin-right: 14px;
+            }
         }
     }
     &_logo{
@@ -50,12 +79,21 @@
                 margin: 14px 8px 0 0;
             }
         }
+        @media (max-width: @mobile-settings){
+            top: 30px;
+            right: calc(50% - 20px);
+        }
     }
     &_input{
         &:checked{
             & ~ .choice-size_logo{
                 display: block;
             }
+        }
+    }
+    &_group {
+        @media (max-width: @mobile-settings){
+            display: flex;
         }
     }
 }
@@ -120,6 +158,10 @@
         left: 82px;
         font-size: 12px;
         white-space: nowrap;
+        @media (max-width: @mobile-settings){
+            top: 74px;
+            left: 0px;
+        }
     }
 }
 // /change-position
