--- a/src/styles/less/variables.less
+++ b/src/styles/less/variables.less
@@ -67,6 +67,9 @@
 
 //== Media queries breakpoints
 
+@mobile-slider:              761px;
+@mobile-settings:            457px;
+
 @screen-xs:                  480px;
 @screen-xs-min:              @screen-xs;
 @screen-phone:               @screen-xs-min;
