--- a/src/styles/less/base/buttons.less
+++ b/src/styles/less/base/buttons.less
@@ -82,6 +82,21 @@
     }
 }
 
+.btn-another-el {
+    @media (max-width: @mobile){
+        font-size: 9px;
+        padding-left: 0;
+        padding-right: 0;
+        background-color: transparent;
+        border: 0;
+        color: #000;
+        &:hover{
+            border-color: transparent;
+            background: transparent;
+            color: #000;
+        }
+    }
+}
 
 
 
