--- a/src/styles/less/modules/settings.less
+++ b/src/styles/less/modules/settings.less
@@ -18,21 +18,21 @@
             color: #8f9b92;
             &__pos{
                 margin-top: 21px;
-                 @media (max-width: @mobile-settings){
+                 @media (max-width: @mobile){
                     margin-top: 0;
                 }
             }
-            @media (max-width: @mobile-settings){
+            @media (max-width: @mobile){
                 width: auto;
             }
         }
         &_val{
             margin: 0 0 0 126px;
-            @media (max-width: @mobile-settings){
+            @media (max-width: @mobile){
                 margin: 0;
             }
         }
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             display: flex;
             flex-direction: column;
             padding: @mobile-base-offset;
@@ -40,7 +40,7 @@
         }
     }
     &__horizontal{
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             display: flex;
             justify-content: space-between;
             padding-left: 15px;
@@ -58,12 +58,12 @@
     font-size: 14px;
     &_field{
         margin: 8px 0 0;
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             margin: 0;
         }
         &:first-child{
             margin: 0;
-            @media (max-width: @mobile-settings){
+            @media (max-width: @mobile){
                 margin-right: 14px;
             }
         }
@@ -79,7 +79,7 @@
                 margin: 14px 8px 0 0;
             }
         }
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             top: 30px;
             right: calc(50% - 20px);
         }
@@ -92,7 +92,7 @@
         }
     }
     &_group {
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             display: flex;
         }
     }
@@ -158,7 +158,7 @@
         left: 82px;
         font-size: 12px;
         white-space: nowrap;
-        @media (max-width: @mobile-settings){
+        @media (max-width: @mobile){
             top: 74px;
             left: 0px;
         }
