--- a/src/styles/less/modules/sprite.less
+++ b/src/styles/less/modules/sprite.less
@@ -20,7 +20,7 @@
     &:hover{
         opacity: .5;
     }
-    @media (max-width: @mobile-settings){
+    @media (max-width: @mobile){
         font-size: 15px;
         top: 22px;
         right: 18px;
