--- a/src/styles/less/variables.less
+++ b/src/styles/less/variables.less
@@ -67,8 +67,7 @@
 
 //== Media queries breakpoints
 
-@mobile-slider:              761px;
-@mobile-settings:            457px;
+@mobile:                     450px;
 
 @screen-xs:                  480px;
 @screen-xs-min:              @screen-xs;
