--- a/src/templates/settingsMenu.html
+++ b/src/templates/settingsMenu.html
@@ -4,7 +4,7 @@
     <div class="head">
         <div i18n="assistant_settings" class="head_title">
         </div>
-        <div i18n="settings_choose_size_and_position" class="head_text">
+        <div i18n="settings_choose_size_and_position" class="head_text head_text--mobile-h">
         </div>
     </div>
 
