--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -1,12 +1,21 @@
 <div class="main">
     <div class="close adg-close"></div>
-    <div class="head">
-        <div i18n="assistant_block_element" class="head_title" id="head_title"></div>
-        <div i18n="assistant_block_element_explain" class="head_text" id="head_text"></div>
+    <div class="head head--slider">
+        <div class="head_in head_in--slider">
+            <div i18n="assistant_block_element" class="head_title head_title--slider" id="head_title"></div>
+            <div class="element-rule_more element-rule_more--mobile">
+                <span class="element-rule_expand-link" id="ExtendedSettingsText"></span>
+            </div>
+        </div>
+        <div class="adg-slide-btns">
+            <div class="adg-slide-btn adg-slide-btn--minus"></div>
+            <div class="adg-slide-btn adg-slide-btn--plus"></div>
+        </div>
+        <div i18n="assistant_block_element_explain" class="head_text head_text--mobile-h" id="head_text"></div>
     </div>
     <div class="content" id="slider-area">
-        <div class="element-rule">
-            <div i18n="assistant_slider_explain" class="element-rule_text"></div>
+        <div class="element-rule element-rule--slider">
+            <div i18n="assistant_slider_explain" class="element-rule_text element-rule_text--slider"></div>
             <div class="element-rule_slider">
                 <div class="adg-slide" id="slider">
                     <div i18n="assistant_slider_max" class="adg-slide-clue-max"></div>
@@ -46,8 +55,8 @@
             </div>
         </div>
     </div>
-    <div class="foot">
-        <button i18n="assistant_another_element" type="button" class="btn btn-default" id="adg-cancel"></button>
+    <div class="foot foot--slider">
+        <button i18n="assistant_another_element" type="button" class="btn btn-default btn-another-el" id="adg-cancel"></button>
         <div class="foot_action">
             <div class="foot_action_btn">
                 <button i18n="assistant_preview" type="button" class="btn btn-primary" id="adg-preview"></button>
