Drag in mobile devices Fix #42

--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -16,6 +16,8 @@
     padding: 0 !important;
     will-change: transform;
     opacity: 0.7;
+    touch-action: none;
+    -ms-touch-action: none;
 }
 
 .adguard-hide {
