--- a/src/styles/less/modules/menu.less
+++ b/src/styles/less/modules/menu.less
@@ -5,6 +5,8 @@
 .menu-head{
     padding: @base-offset - 2 @base-offset;
     cursor: move;
+    touch-action: none;
+    -ms-touch-action: none;
     &_title{
         font-size: 16px;
         font-weight: 700;
