--- a/src/styles/less/layout/content.less
+++ b/src/styles/less/layout/content.less
@@ -14,5 +14,8 @@ table {
     box-shadow: 0 5px 25px fade(#000, 35);
     @media (max-width: @mobile){
         margin: 1px;
+        box-shadow: none;
+        border-top: 1px solid #ccc;
+        border-radius: 0;
     }
 }
