--- a/src/styles/less/modules/element-rule.less
+++ b/src/styles/less/modules/element-rule.less
@@ -6,14 +6,7 @@
     padding: @base-offset;
      &--slider{
         @media (max-width: @mobile){
-            padding: 0;
-        }
-    }
-    &_text{
-        &--slider{
-            @media (max-width: @mobile){
-                display: none;
-            }
+            display: none;
         }
     }
     &_slider{
@@ -91,21 +84,19 @@
             margin: 0;
         }
     }
-    &_more{
-        @media (max-width: @mobile){
-            display: none;
-        }
-    }
-    &_more--mobile{
-        display: none;
+    &_more--mobile {
         @media (max-width: @mobile) {
-            display: block;
-            background: url(../i/menu-settings.svg) bottom right no-repeat;
-            background-size: 18px 18px;
-            width: 18px;
-            height: 18px;
-            padding: 10px 0 0 10px;
-            box-sizing: content-box;
+            .element-rule_expand-link {
+                display: none;
+            }
+            #adg-cancel {
+                width: 106px;
+                padding: 10px 7px;
+            }
+
+            #adg-accept {
+                padding: 10px 6px;
+            }
         }
     }
 }
