--- a/src/templates/sliderMenu.html
+++ b/src/templates/sliderMenu.html
@@ -5,6 +5,8 @@
             <div i18n="assistant_block_element" class="head_title head_title--slider" id="head_title"></div>
             <div class="element-rule_more element-rule_more--mobile">
                 <span class="element-rule_expand-link" id="ExtendedSettingsText"></span>
+                <button i18n="assistant_block" type="button" class="btn btn-cancel" id="adg-accept"></button>
+                <button i18n="assistant_another_element" type="button" class="btn btn-default" id="adg-cancel"></button>
             </div>
         </div>
         <div class="adg-slide-btns">
