--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -14,6 +14,7 @@
     margin: 0 !important;
     border: 0 !important;
     padding: 0 !important;
+    visibility: visible !important;
     will-change: transform;
     opacity: 0.7;
     touch-action: none;
