Fixes for mobile implementation

--- a/src/styles/less/modules/element-rule.less
+++ b/src/styles/less/modules/element-rule.less
@@ -85,7 +85,9 @@
         }
     }
     &_more--mobile {
+        display: none;
         @media (max-width: @mobile) {
+            display: block;
             .element-rule_expand-link {
                 display: none;
             }
