--- a/src/styles/less/base/buttons.less
+++ b/src/styles/less/base/buttons.less
@@ -9,7 +9,7 @@
     display: inline-block;
     margin-bottom: 0;
     padding: 11px 17px 9px;
-    font: 13px/18px @ff-gotham;
+    font: 13px/18px @open-sans;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
