--- a/src/styles/less/base/fonts.less
+++ b/src/styles/less/base/fonts.less
@@ -1,17 +1,6 @@
 // Fonts
-// -------------------------------------------------------------
+@open-sans: 'Open Sans', @font-family-base;
 
-
-// GothamPro
-.fontFace('GothamPro', 'gothaproreg-webfont', 'gotham_proregular');
-.fontFace('GothamPro', 'gothaprolig-webfont', 'gotham_prolight', 200);
-.fontFace('GothamPro', 'gothapromed-webfont', 'gotham_promedium', 500);
-.fontFace('GothamPro', 'gothaprobol-webfont', 'gotham_probold', 700);
-
-@ff-gotham: 'GothamPro', @font-family-base;
-.ff-gotham{
-    font-family: @ff-gotham;
+.open-sans {
+    font-family: @open-sans;
 }
-
-
-
