--- a/src/styles/less/base/scaffolding.less
+++ b/src/styles/less/base/scaffolding.less
@@ -27,7 +27,7 @@ html {
 
 body {
     position: relative;
-    font-family: @ff-gotham;
+    font-family: @open-sans;
     font-size: @font-size-base;
     line-height: @line-height-computed;
     color: @text-color;
