--- a/src/styles/less/layout/content.less
+++ b/src/styles/less/layout/content.less
@@ -12,7 +12,7 @@ table {
     border-radius: 4px;
     background: #fff;
     box-shadow: 0 5px 25px fade(#000, 35);
-    @media (max-width: @mobile){
+    @media screen and (max-width: @mobile) {
         margin: 1px;
         box-shadow: none;
         border-top: 1px solid #ccc;
