--- a/src/styles/less/modules/wot.less
+++ b/src/styles/less/modules/wot.less
@@ -59,7 +59,6 @@
     width: 52px;
     height: 18px;
     display: inline-block;
-    vertical-align: top;
 }
 
 .adg-wot-confidence-0 {
@@ -90,6 +89,8 @@
 .confidence-indication,
 .wot-indicator{
     text-decoration: none;
+    display: inline-block;
+    vertical-align: baseline;
     &:hover{
         text-decoration: none;
     }
