--- a/src/styles/less/modules/wot.less
+++ b/src/styles/less/modules/wot.less
@@ -89,11 +89,14 @@
 .confidence-indication,
 .wot-indicator{
     text-decoration: none;
-    display: inline-block;
     vertical-align: baseline;
     &:hover{
         text-decoration: none;
     }
+}
+
+.confidence-indication {
+    display: inline-block;
 }
 
 
