--- a/src/styles/less/modules/menu.less
+++ b/src/styles/less/modules/menu.less
@@ -19,6 +19,7 @@
         overflow: hidden;
         white-space: nowrap;
         max-width: 230px;
+        line-height: 26px;
     }
     &_text{
         margin: 4px 10px 0 0;
