--- a/src/styles/less/modules/wot.less
+++ b/src/styles/less/modules/wot.less
@@ -89,7 +89,7 @@
 .confidence-indication,
 .wot-indicator{
     text-decoration: none;
-    vertical-align: baseline;
+    vertical-align: middle;
     &:hover{
         text-decoration: none;
     }
