--- a/src/styles/less/modules/menu.less
+++ b/src/styles/less/modules/menu.less
@@ -32,17 +32,21 @@
 
 
 .menu-filter{
+    width: 100%;
+    display: table;
     &:extend(.cf-mix all);
     padding: @base-offset;
     border-top: 1px solid @border-color;
     &_lbl{
-        float: left;
+        display: table-cell;
+        vertical-align: middle;
         font-size: 14px;
         font-weight: 500;
         color: #8f9b92;
     }
     &_val{
-        float: right;
+        display: table-cell;
+        vertical-align: middle;
     }
     &_label{
         position: relative;
