--- a/src/styles/less/modules/menu.less
+++ b/src/styles/less/modules/menu.less
@@ -156,6 +156,7 @@
     border-top: 1px solid @border-color;
     &_i{
         display: table;
+        width: 100%;
         padding: 8px @base-offset;
         cursor: pointer;
         &:hover{
