--- a/src/styles/less/modules/menu.less
+++ b/src/styles/less/modules/menu.less
@@ -178,6 +178,7 @@
     &_ico{
         display: table-cell;
         vertical-align: middle;
+        width: 24px;
         &_h{
             display: none;
         }
