--- a/src/styles/mobile-style.css
+++ b/src/styles/mobile-style.css
@@ -3,16 +3,70 @@
     border-bottom: 1px solid #ccc;
     margin: 0;
     box-shadow: none;
+    height: 100%;
 }
 
-@media (min-width: 600px) {
-    .element-rule_more, #adg-preview {
-        display: none;
-    }
+.element-rule_more, #adg-preview {
+    display: block;
+}
+
+.element-rule--slider, .foot {
+    display: none;
+}
+
+.adg-slide-btns {
+    display: flex;
 }
 
 .element-rule_more .btn {
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+}
+
+
+.adg-slide-btns{
+    display: flex;
+    padding-right: 25px;
+}
+
+.head_in--slider {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    cursor: default;
+}
+
+.head_title--slider {
+    display: none;
+}
+
+#adg-accept {
+    padding: 10px 6px;
+}
+
+#adg-cancel {
+    width: 106px;
+    padding: 10px 7px;
+}
+
+
+@media (min-width: 500px) {
+    #adg-cancel {
+        width: auto;
+    }
+}
+
+.head {
+    padding: 18px 20px;
+    display: flex;
+    justify-content: space-between;
+    cursor: default;
+}
+
+.head_text {
+    display: none;
 }
