--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -2,6 +2,11 @@
     display: block!important;
     z-index: 9999999999!important;
     position: relative!important;
+    width: 0!important;
+    height: 0!important;
+    margin: 0!important;
+    padding: 0!important;
+    overflow: hidden!important;
 }
 
 .adguard-alert {
