--- a/src/templates/mobileMenu.html
+++ b/src/templates/mobileMenu.html
@@ -1,7 +1,7 @@
-<div class="main mobile">
-    <button title="assistant_block" class="btn btn-icon-block adg-accept">accept</button>
-    <button title="assistant_preview" class="btn btn-icon-preview adg-preview">preview</button>
-    <button title="plus" class="btn btn-icon-plus adg-plus">plus</button>
-    <button title="minus" class="btn btn-icon-minus adg-minus">minus</button>
-    <button title="close" class="btn btn-close adg-close">close</button>
+<div class="main mobile main-menu">
+    <button title="assistant_block" class="btn btn-icon-block adg-accept main-menu__btn main-menu__btn--accept">accept</button>
+    <button title="assistant_preview" class="btn btn-icon-preview adg-preview main-menu__btn main-menu__btn--preview">preview</button>
+    <button title="plus" class="btn btn-icon-plus adg-plus main-menu__btn main-menu__btn--plus">plus</button>
+    <button title="minus" class="btn btn-icon-minus adg-minus main-menu__btn main-menu__btn--minus">minus</button>
+    <button title="close" class="btn btn-close adg-close main-menu__btn main-menu__btn--close">close</button>
 </div>
