--- a/src/templates/mobilePopup.html
+++ b/src/templates/mobilePopup.html
@@ -1,8 +1,9 @@
-<div class="main mobile">
-    <h2 class="mobile-title" i18n="assistant_select_element"></h2>
-    <div class="content" i18n="assistant_select_element_text"></div>
+<div class="main mobile main-popup">
+    <div class="main-popup__logo"></div>
+    <h2 class="mobile-title main-popup__title" i18n="assistant_select_element"></h2>
+    <div class="content main-popup__content" i18n="assistant_select_element_text"></div>
     <div class="footer">
-        <button i18n="assistant_select_element_start" class="btn btn-active start-select-mode"></button>
-        <button i18n="assistant_select_element_cancel" class="btn cancel-select-mode"></button>
+        <button i18n="assistant_select_element_start" class="btn btn-active start-select-mode main-popup__btn main-popup__btn--green"></button>
+        <button i18n="assistant_select_element_cancel" class="btn cancel-select-mode main-popup__btn"></button>
     </div>
 </div>
