--- a/src/styles/less/mobile-style.less
+++ b/src/styles/less/mobile-style.less
@@ -71,7 +71,7 @@
         display: flex;
         justify-content: space-between;
         border-radius: 2px;
-        box-shadow: 0 0px 30px 0 rgba(0,0,0,.2);
+        box-shadow: 0 0 20px -2px rgba(0,0,0,.3);
 
         &__btn {
             font-size: 0;
@@ -88,7 +88,7 @@
                 background-color: #d0f0d6;
             }
 
-            &:active {
+            &:active, &.active {
                 background-color: #66B574;
                 box-shadow: inset 2px 2px 3px 0 rgba(92, 92, 92, 0.5);
             }
@@ -106,7 +106,7 @@
             &--preview {
                 background-image: url(../i/eye-color.svg);
 
-                &:active {
+                &:active, &.active {
                     background-image: url(../i/eye.svg);
                 }
             }
@@ -172,6 +172,11 @@
                 &:active {
                     background-image: url(../i/cross.svg);
                 }
+            }
+
+            &:disabled {
+                opacity: .9;
+                background-color: rgba(92, 92, 92, 0.5);
             }
         }
     }
