--- a/src/styles/less/mobile-style.less
+++ b/src/styles/less/mobile-style.less
@@ -4,6 +4,10 @@
 @import "base/fonts";
 @import "base/base-common";
 
+body {
+    padding: 1px;
+}
+
 .main {
     padding: 30px 10px;
     background: #fff;
@@ -17,6 +21,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin: 20px;
+        box-shadow: 0 0px 20px 0 rgba(0,0,0,.2);
 
         &__logo {
             background-image: url(../i/logo-new.svg);
