--- a/src/styles/less/mobile-style.less
+++ b/src/styles/less/mobile-style.less
@@ -9,11 +9,20 @@ body {
 }
 
 .main {
+    position: relative;
     padding: 30px 10px;
     background: #fff;
 
     .footer {
         letter-spacing: 5px;
+    }
+
+    &-version {
+        position: absolute;
+        bottom: 0;
+        right: 7px;
+        color: #eee;
+        font-size: 12px;
     }
 
     &-popup {
