--- a/src/templates/mobilePopup.html
+++ b/src/templates/mobilePopup.html
@@ -6,4 +6,6 @@
         <button i18n="assistant_select_element_start" class="btn btn-active start-select-mode main-popup__btn main-popup__btn--green"></button>
         <button i18n="assistant_select_element_cancel" class="btn cancel-select-mode main-popup__btn"></button>
     </div>
+
+    <i class="main-version"></i>
 </div>
