--- a/src/templates/mainMenu.html
+++ b/src/templates/mainMenu.html
@@ -2,15 +2,13 @@
     <div class="close"></div>
     <div class="menu-head">
         <div class="menu-head_title">
-        <span class="menu-head_name">
-
-        </span>
+            <span class="menu-head_name"></span>
             <a class="wot-indicator wot-hide" target="_blank" href="http://adguard.com/wot-scorecard.html?domain=habrahabr.ru">
                 <i id="WotIndication" class="adg-wot tooltip" data-title="Site reputation indicator"></i>
             </a>
-            <a class="confidence-indication wot-hide" href="#"><i id="ConfidenceIndication"
-                                                         class="adg-wot-confidence tooltip"
-                                                         data-title="Reputation Confidence Level"></i></a>
+            <a class="confidence-indication wot-hide" href="#">
+                <i id="ConfidenceIndication" class="adg-wot-confidence tooltip" data-title="Reputation Confidence Level"></i>
+            </a>
         </div>
         <div class="menu-head_text wot-hide" id="WotDescriptionText">
             <a id="WotLogo" href="#"><span
@@ -29,38 +27,38 @@
     </div>
     <div class="menu">
         <div id="do-not-block-30-sec" class="menu_i">
-        <span class="menu_ico">
+            <span class="menu_ico">
             <span class="menu_ico_s i-menu-time"></span>
             <span class="menu_ico_h i-menu-time-h"></span>
-        </span>
+            </span>
             <span i18n="menu_do_not_filter_30_sec" class="menu_name"></span>
         </div>
         <div id="block-ad" class="menu_i">
-        <span class="menu_ico">
+            <span class="menu_ico">
             <span class="menu_ico_s i-menu-select"></span>
             <span class="menu_ico_h i-menu-select-h"></span>
-        </span>
+            </span>
             <span i18n="menu_block_ad_on_site" class="menu_name"></span>
         </div>
         <div class="menu_i" id="report-abuse">
-        <span class="menu_ico">
+            <span class="menu_ico">
             <span class="menu_ico_s i-menu-complaint"></span>
             <span class="menu_ico_h i-menu-complaint-h"></span>
-        </span>
+            </span>
             <span i18n="menu_report_abuse" class="menu_name"></span>
         </div>
         <div class="menu_i" id="site-report">
-        <span class="menu_ico">
+            <span class="menu_ico">
             <span class="menu_ico_s i-menu-report"></span>
             <span class="menu_ico_h i-menu-report-h"></span>
-        </span>
+            </span>
             <span i18n="menu_site_report" class="menu_name"></span>
         </div>
         <div class="menu_i" id="assistant-settings">
-        <span class="menu_ico">
+            <span class="menu_ico">
             <span class="menu_ico_s i-menu-settings"></span>
             <span class="menu_ico_h i-menu-settings-h"></span>
-        </span>
+            </span>
             <span i18n="menu_settings" class="menu_name"></span>
         </div>
     </div>
