--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -39,7 +39,7 @@
     min-width: auto !important;
     max-width: auto !important;
 
-    .sg_hide_element {
+    &.sg_hide_element {
         display: none!important;
     }
 }
